<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            tools:ignore="UselessParent">
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/scale_colon"
        android:paddingEnd="16dp"
        tools:ignore="RtlSymmetry" />
       <AutoCompleteTextView
           android:id="@+id/add_model_autocomplete_scale"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:paddingStart="4dp"
           android:hint="@string/scale"
           android:layout_weight="1"
           tools:ignore="RtlSymmetry"
           />
    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/airline_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_model_airline_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:hint="@string/airline"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/frame_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_model_frame_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:hint="@string/frame"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/livery_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_model_livery_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:hint="@string/livery"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/brand_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
                <AutoCompleteTextView
                    android:id="@+id/add_model_autocomplete_brand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:hint="@string/brand"
                    android:layout_weight="1"
                    tools:ignore="RtlSymmetry"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/reg_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/model_row_reg_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/registration"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/comment_colon"
                    android:paddingEnd="16dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/model_row_comment_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/comment"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/add_model_image_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/image_plus"
                app:tint="?android:icon"
                android:contentDescription="@string/add_image" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_model_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="end"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_model_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="100dp" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>