<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_post_btn_add_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_photos"
        android:src="@drawable/image_edit"
        android:layout_gravity="end|top"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             >
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:id="@+id/add_post_img_recycler"
                 android:orientation="horizontal"
                 android:scrollbars="horizontal"
                 android:visibility="visible"
                 />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_post_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/post">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_post_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_post_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/add"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_post_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="?attr/borderlessButtonStyle"
                />
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/add_post_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"/>
        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>